<resources>
    <string name="app_name">Wendo</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_curated">Featured</string>
    <string name="drawer_menu_buckets">Collections</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="user_name">User name</string>

    <string name="bucket_name">Bucket Name</string>
    <string name="bucket_description">Bucket Description</string>
    <string name="new_bucket">New Bucket</string>
    <string name="new_bucket_create">Create</string>
    <string name="new_bucket_cancel">Cancel</string>
    <string name="edit_bucket_menu_save">Save</string>
    <string name="send_to">share</string>
    <string name="shot_detail_loading_buckets">Loading buckets....</string>
    <string name="shot_author_image">shot author profile image</string>
    <string name="follow">Follow</string>
    <string name="no_shot">The user has not upload any photo</string>
    <string name="no_bucket">The user has not create any collection</string>
    <string name="download">Download</string>
    <string name="info">Info</string>
    <string name="open_in_unsplash">Open in Unsplash</string>
    <string name="download_started">Download started</string>
    <string name="open_unsplash">Unsplash</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>

    <string name="no_search_result">No search result...</string>
    <string name="user_no_photo">This user has not upload any photo yet...</string>
    <string name="user_no_like">This user has not like any photo yet...</string>
    <string name="bucket_no_photo">This collection doesn\'t contain any photo.</string>
    <string name="error">Error!</string>
    <string name="user_no_bucket">The user has not create any collection yet...</string>
    <string name="current_user_no_bucket">You haven\'t create any collection.</string>
    <string name="drawer_menu_new">New</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_profile">My Profile</string>
    <string name="upload">Upload a photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="clear_cache">Clear cache</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="cache_size">Cache size: </string>
    <string name="quality">Quality</string>
    <string name="load_quality">Load quality</string>
    <string name="load_quality_description">Choose the quality of photos that are loaded</string>
    <string name="download_quality">Download quality</string>
    <string name="download_quality_description">Choose the quality of photos you want to download to your phone</string>
    <string name="layout">Layout</string>
    <string name="display_layout">Display layout</string>
    <string name="display_layout_description">Choose the way photos are displayed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="raw">Raw</string>
    <string name="full">Full</string>
    <string name="regular">Regular</string>
    <string name="small">Small</string>
    <string name="thumb">Thumb</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="no_internet">No Internet Connection...</string>

</resources>
