<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <include layout="@layout/toolbar" />

    <TextView
        style="@style/AppTheme.TextView.Settings.Title"
        android:text="@string/general" />


    <TextView
        android:id="@+id/language"
        style="@style/AppTheme.TextView.Settings.Content"
        android:text="@string/language" />

    <include layout="@layout/divider_horizontal" />

    <TextView
        android:id="@+id/theme"
        style="@style/AppTheme.TextView.Settings.Content"
        android:text="@string/theme" />

    <include layout="@layout/divider_horizontal" />

    <LinearLayout
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:text="@string/clear_cache" />

        <TextView
            android:id="@+id/cache_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/cache_size"
            android:textSize="12sp"/>

    </LinearLayout>

    <include layout="@layout/divider_horizontal" />


    <TextView
        style="@style/AppTheme.TextView.Settings.Title"
        android:text="@string/quality" />

    <LinearLayout
        android:id="@+id/load_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:text="@string/load_quality" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_quality_description"
            android:textSize="12sp"/>

    </LinearLayout>

    <include layout="@layout/divider_horizontal" />

    <LinearLayout
        android:id="@+id/download_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:text="@string/download_quality" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_quality_description"
            android:textSize="12sp"/>

    </LinearLayout>

    <include layout="@layout/divider_horizontal" />

    <TextView
        style="@style/AppTheme.TextView.Settings.Title"
        android:text="@string/layout" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:text="@string/display_layout" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_layout_description"
            android:textSize="12sp"/>

    </LinearLayout>

    <include layout="@layout/divider_horizontal" />

</LinearLayout>