<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_item_new"
            android:icon="@drawable/ic_timeline_black_18dp"
            android:title="@string/drawer_menu_new"
            android:checked="true"/>

        <item
            android:id="@+id/drawer_item_featured"
            android:icon="@drawable/ic_star_black_18dp"
            android:title="@string/drawer_menu_curated"/>

        <item
            android:id="@+id/drawer_item_buckets"
            android:icon="@drawable/ic_inbox_black_18dp"
            android:title="@string/drawer_menu_buckets"/>

    </group>

</menu>